updated sizes of images and fixed overlapping section

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -432,22 +432,7 @@ div.languages,
   
   /* mobile */
 
-/* header mobile */
 
-@media (max-width: 320px) {
-  body {
-    overflow-x: hidden;
-  }
-
-  .about-me,
-  .grid-full {
-    grid-template-rows: 100%;
-  }
-
-  .introduction {
-    font-size: 8px;
-  }
-}
 
 @media (max-width: 1023px) {
   .about *,
@@ -467,6 +452,11 @@ div.languages,
         url('') center / 200% no-repeat;
     }
 
+    header h1,
+   .description h1 {
+    font-size: 50px;
+  }
+
     .projects,
     .grid-two-rows,
     .grid-full,
@@ -484,7 +474,7 @@ div.languages,
   
     .description h1, 
     .description p {
-      max-width: fit-content;
+      max-width: 300px;
     }
 
     .about-me {
@@ -634,6 +624,58 @@ div.languages,
 
     footer {
       height: 300px;
+    }
+  }
+
+  @media (max-width: 320px) {
+    body {
+      overflow-x: hidden;
+    }
+
+  .projects .github,
+  .projects .live {
+    font-size: 12px;
+    width: 100px;
+    left: 0;
+    padding: 0;
+  }
+
+  div.languages {
+    padding: 0;
+    font-size: 10px;
+  }
+  
+    .about-me,
+    .grid-full {
+      grid-template-rows: 100%;
+    }
+
+    .about-me {
+      margin-bottom: 800px;
+    }
+  
+    .introduction {
+      font-size: 8px;
+    }
+  
+    .first-project {
+      margin: 0;
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(255, 255, 255, 0), 
+      rgba(0, 0, 0, 0.8)), url(../images/first-project.png) 10% / 100% no-repeat;
+    }
+    .second-project {
+      margin: 0;
+      background:
+        linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(255, 255, 255, 0), 
+        rgba(0, 0, 0, 0.8)),
+        url('../images/second-project.png') center / 100% no-repeat;
+    }
+  
+    .main-project {
+      margin: 0;
+      background:
+        linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0)),
+        url('../images/main-project.png') center / 100% no-repeat;
     }
   }
   
